--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
         
         <div class="nav-links">
-            <a href="draftcentre.html">Draftcentre</a> | 
+            <a href="create-league.html">Manage Leagues</a> | 
             <a href="https://github.com/your-username/fantasy-hockey-app" target="_blank">View on GitHub</a>
         </div>
     </div>
