firebase setup cont'd

--- a/draftcentre.html
+++ b/draftcentre.html
@@ -494,6 +494,8 @@
         </div>
     </div>
     
+    <script src="firebaseConfig.js"></script>
+
     <!-- Firebase SDK -->
     <script type="module">
         // Import the functions you need from the SDKs
@@ -513,7 +515,15 @@
         };
 
         // Initialize Firebase with config
-        const app = initializeApp(firebaseConfig);
+        const app = initializeApp(window.firebaseConfig || {
+            apiKey: "PLACEHOLDER",
+            authDomain: "playofffantasyhockey.firebaseapp.com",
+            databaseURL: "https://playofffantasyhockey-default-rtdb.firebaseio.com",
+            projectId: "playofffantasyhockey",
+            storageBucket: "playofffantasyhockey.appspot.com",
+            messagingSenderId: "PLACEHOLDER",
+            appId: "PLACEHOLDER"
+        });
         const auth = getAuth();
         const provider = new GoogleAuthProvider();
         const database = getDatabase();
