--- a/manage-leagues.html
+++ b/manage-leagues.html
@@ -634,13 +634,6 @@
                 settings: {
                     status: 'active', // active, completed, etc.
                     draftStatus: 'pending' // pending, scheduled, completed
-                },
-                chat: {
-                    system: {
-                        type: 'system',
-                        text: `League "${leagueName}" created by ${currentUser.displayName}`,
-                        timestamp: new Date().toISOString()
-                    }
                 }
             };
             
@@ -658,6 +651,14 @@
                         code: leagueCode,
                         role: 'commissioner',
                         joinedAt: new Date().toISOString()
+                    });
+                })
+                .then(() => {
+                    // Add system message to chat properly using addChatMessage function
+                    return addChatMessage(newLeagueRef.key, {
+                        type: 'system',
+                        text: `League "${leagueName}" created by ${currentUser.displayName}`,
+                        timestamp: new Date().toISOString()
                     });
                 })
                 .then(() => {
@@ -816,16 +817,6 @@
             }).then(() => {
                 // Add league to user's leagues
                 const userLeagueRef = ref(database, `users/${currentUser.uid}/leagues/${foundLeague.id}`);
-                return set(userLeagueRef, {
-                    leagueId: foundLeague.id,
-                    name: foundLeague.name,
-                    code: foundLeague.code,
-                    role: 'manager',
-                    joinedAt: new Date().toISOString()
-                });
-            }).then(() => {
-            // Add league to user's leagues
-            const userLeagueRef = ref(database, `users/${currentUser.uid}/leagues/${foundLeague.id}`);
                 return set(userLeagueRef, {
                     leagueId: foundLeague.id,
                     name: foundLeague.name,
@@ -1086,7 +1077,7 @@
         
         // Add chat message
         function addChatMessage(leagueId, message) {
-    // Make sure we're using the correct path for chat messages
+            // Make sure we're using the correct path for chat messages
             const chatRef = ref(database, `leagues/${leagueId}/chat`);
             const newMessageRef = push(chatRef);
             return set(newMessageRef, message);
