--- a/manage-leagues.html
+++ b/manage-leagues.html
@@ -641,7 +641,21 @@
             const leaguesRef = ref(database, 'leagues');
             const newLeagueRef = push(leaguesRef);
             
+            // Store the initial system message text
+            const initialChatMessageText = `League "${leagueName}" created by ${currentUser.displayName}`;
+
+            // Remove chat from initial league data
+            delete leagueData.chat;
+
             set(newLeagueRef, leagueData)
+                .then(() => {
+                    // Add the initial chat message using the standard function
+                    return addChatMessage(newLeagueRef.key, {
+                        type: 'system',
+                        text: initialChatMessageText,
+                        timestamp: leagueData.createdAt // Use the league creation timestamp
+                    });
+                })
                 .then(() => {
                     // Link league to user
                     const userLeaguesRef = ref(database, `users/${currentUser.uid}/leagues/${newLeagueRef.key}`);
@@ -651,14 +665,6 @@
                         code: leagueCode,
                         role: 'commissioner',
                         joinedAt: new Date().toISOString()
-                    });
-                })
-                .then(() => {
-                    // Add system message to chat properly using addChatMessage function
-                    return addChatMessage(newLeagueRef.key, {
-                        type: 'system',
-                        text: `League "${leagueName}" created by ${currentUser.displayName}`,
-                        timestamp: new Date().toISOString()
                     });
                 })
                 .then(() => {
@@ -817,6 +823,16 @@
             }).then(() => {
                 // Add league to user's leagues
                 const userLeagueRef = ref(database, `users/${currentUser.uid}/leagues/${foundLeague.id}`);
+                return set(userLeagueRef, {
+                    leagueId: foundLeague.id,
+                    name: foundLeague.name,
+                    code: foundLeague.code,
+                    role: 'manager',
+                    joinedAt: new Date().toISOString()
+                });
+            }).then(() => {
+            // Add league to user's leagues
+            const userLeagueRef = ref(database, `users/${currentUser.uid}/leagues/${foundLeague.id}`);
                 return set(userLeagueRef, {
                     leagueId: foundLeague.id,
                     name: foundLeague.name,
